tests/SyntaxError/syntax_error.py
this is not really a valid ruby file.
it'll never work.  give up now!

